k8s/suma-chat/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: suma-chat
  labels:
    name: suma-chat
